# blackberry-monitor

./: .gitignore  README.md  docker-compose.yml
air_quality/: CMakeLists.txt  Dockerfile  air_quality_metrics.py  i2c_connection.h  influx_client.cpp  influx_client.h  influxdb.hpp  main.cpp
air_quality/dependencies/: CMakeLists.txt
air_quality_bsec/: CMakeLists.txt  Dockerfile  main.cpp
air_quality_bsec_python/: make.config
air_quality_python/bsec_bme680/: make.config
air_quality_rust/: Cargo.toml
air_quality_rust/.cargo/: config
bicycle/: bicycle_metrics.py  strava_client.py  strava_stats.py
dashboards/: raspberry_pi_health.json
etc/: kapacitor.conf  telegraf.conf
etc/grafana-provisioning/dashboards/: home_sweet_home.json  influxtelegraf_rev1.json  open-weather-map.json  telegraf.json  weather.json
etc/grafana-provisioning/datasources/: datasource.yml
influx_dashboards/: home_sweet_home.json
metrics/: metrics.py
python/: influx_client.py
rasperrypi_setup/: setup_mh_z19.sh
scripts/: air_quality.py  mh_z19.py  update_led.py
telegraf_with_python/: Dockerfile
